Commander Genius Release (CloneKeenPlus):
=========================================

v0.3.1.0:
---------

10-12-2009
- Fixed some hidden segfaults and wrong inits, which provoked the yorps getting unstunnable
- Now using the fonts.bmp file, we can use other font graphics (with hi-colour support!)

09-12-2009
- Fixed ice cannons to the engine. Now they are working again

08-12-2009
- Corrected start inventory for all Episodes
- The Stone with Rope in Episode 1 Level 16 is working again!
- The Tank Robot of Episode 1 is working again!rtin

07-12-2009
- Added Easy mode. It's still has no function
- Menus have been stripped down a bit (Pizza2004)

06-12-2009
- Now the YourPartsAreMissing has the original icons
- The pogo is frozen. I did that for testing
- Player doesn't fall anymore when level starts
- Autoraygun option is working correctly again!
- Godmode on map is working correctly again
- The option level-replayability is working once again!
- Yorps are screaming correctly again, when they are shot

05-12-2009
- New Playgame Engine System
- The entire Code has been rewritten in order to support more games (Galaxy for example)
- Much more solid engine
- New and innovative Savegame System (Pizza2004)
- New Physics [WIP] (Tulip)
- Better timer that makes the game much faster (Pickle)

v0.3.0.4:
---------

24-09-2009
- New Map System. Now maps of any size can be used for CG

11-09-2009
- many bugs fixes (Many thanks to James K. Beard)
- Graphical improvements and performance (Pickle)

06-09-2009
- The new Graphics Engine is fully implemented and can 
  handle and speedup all the graphics (tiles, sprites, bitmaps, etc)
- Improved Sound-System. Now 16 Bit is supported! (Many thanks to Pickle for his work!)
- Improved 2-player camera and minor issues! (Many thanks to Pizza2004!)

31-08-2009
- graphics system nearly fully implemented
- load menu cancel fixed
- deleted savegames that came with
- changed the way the camera works while in 2 player mode

26-08-2009