@@ -15,9 +15,10 @@
 ////
 // Creation Routine
 ////
-CTitle::CTitle(std::vector<CObject*> &Objects) :
+CTitle::CTitle(std::vector<CObject*> &Objects, CMap &map) :
 m_objects(Objects),
-m_time(0)
+m_time(0),
+m_map(map)
 {}
 
 bool CTitle::init(int Episode)
@@ -39,6 +40,15 @@ bool CTitle::init(int Episode)
 
 	SDL_Rect gameres = g_pVideoDriver->getGameResolution();
 	p_object->setScrPos( (Episode == 3) ? 128 : 96, gameres.h-18 );
+
+	if(gameres.h > 200) // This happens, when the have higher game res height, and ugly unseen
+	{ 					// normally hidden tiles are seen. We replace those tiles
+		for(Uint16 x=0 ; x<22 ; x++)
+		{
+			m_map.setTile(x, 0, g_pGfxEngine->Tilemap->EmptyBackgroundTile(), true);
+			m_map.setTile(x, 1, g_pGfxEngine->Tilemap->EmptyBackgroundTile(), true);
+		}
+	}
 
 	m_objects.push_back(p_object);
 	
