@@ -3,6 +3,9 @@ Commander Genius Release (CloneKeenPlus):
 
 v0.3.1.0:
 ---------
+12-12-2009
+- Improved AI (Yorp)
+- Removed some ugly tiles on the title screen
 
 10-12-2009
 - Fixed some hidden segfaults and wrong inits, which provoked the yorps getting unstunnable
